--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>p5 js</title>
 </head>
-<body style="display: flex; justify-content: center; align-items: center">
-<script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
-<script src="sketch.js"></script>
+<body>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
+    <script src="sketch.js"></script>
 </body>
 </html>
